# AutoVPK

./: CMakeLists.txt  README.md
sce_sys/livearea/contents/: template.xml
src/: file.c  graphics.c  headgen.c  main.c
